miniextendr-macros/tests/ui/pattern_parameter.stderr
error: miniextendr parameters must be simple identifiers (patterns are not supported)
 --> tests/ui/pattern_parameter.rs:6:22
  |
6 | fn destructure_tuple((a, b): (i32, i32)) -> i32 {
  |                      ^^^^^^
